@@ -74,6 +74,7 @@
         --with-lua=internal \
         --with-sqlite=external \
         --with-beecrypt=external \
+        --with-nss=external \
         --with-neon=external \
         --with-xar=internal \
         --with-bzip2=external \
