@@ -39,97 +39,100 @@ extern "C" {
    --------
 
    version                        encoding
-   5.6.DEV                        RPM_VERSION_ENCODE(5,6,_,0,0,_) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,HH,MM)
-   5.6.SNAP.YYYYMMDD              RPM_VERSION_ENCODE(5,6,_,0,0,s) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
-   5.6a7                          RPM_VERSION_ENCODE(5,6,a,7,0,_) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
-   5.6b7                          RPM_VERSION_ENCODE(5,6,b,7,0,_) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
-   5.6rc7                         RPM_VERSION_ENCODE(5,6,b,7,0,_) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
-   5.6.7                          RPM_VERSION_ENCODE(5,6,r,7,0,_) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
-   5.6.7.8                        RPM_VERSION_ENCODE(5,6,r,7,8,_) RPM_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
+   5.6.DEV                        RPMLIB_VERSION_ENCODE(5,6,_,0,0,_) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,HH,MM)
+   5.6.SNAP.YYYYMMDD              RPMLIB_VERSION_ENCODE(5,6,_,0,0,s) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
+   5.6a7                          RPMLIB_VERSION_ENCODE(5,6,a,7,0,_) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
+   5.6b7                          RPMLIB_VERSION_ENCODE(5,6,b,7,0,_) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
+   5.6rc7                         RPMLIB_VERSION_ENCODE(5,6,b,7,0,_) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
+   5.6.7                          RPMLIB_VERSION_ENCODE(5,6,r,7,0,_) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
+   5.6.7.8                        RPMLIB_VERSION_ENCODE(5,6,r,7,8,_) RPMLIB_TIMESTAMP_ENCODE(YYYY,MM,DD,00,00)
 
    USAGE
    -----
 
    #include <rpmversion.h>
-   #if defined(RPM_VERSION) && RPM_VENDOR_EQ('R','P','M','5') && \
-       RPM_VERSION_GE(5,0,a,1,0,_) && RPM_TIMESTAMP_GT(2007,11,13,00,00)
+   #if defined(RPMLIB_VERSION) && RPMLIB_VENDOR_EQ('R','P','M','5') && \
+       RPMLIB_VERSION_GE(5,0,a,1,0,_) && RPMLIB_TIMESTAMP_GT(2007,11,13,00,00)
    [...]
    #endif
 */
 
 /* link-time information */
-extern unsigned long rpm_version(void);
-extern unsigned long rpm_timestamp(void);
-extern unsigned long rpm_vendor(void);
+extern uint32_t rpmlibVersion(void)
+	/*@*/;
+extern uint32_t rpmlibTimestamp(void)
+	/*@*/;
+extern uint32_t rpmlibVendor(void)
+	/*@*/;
 
 /* compile-time information */
-#define RPM_VERSION   RPM_VERSION_ENCODE(@RPM_VERSION@)
-#define RPM_TIMESTAMP RPM_TIMESTAMP_ENCODE(@RPM_TIMESTAMP@)
-#define RPM_VENDOR    RPM_VENDOR_ENCODE(@RPM_VENDOR@)
+#define RPMLIB_VERSION   RPMLIB_VERSION_ENCODE(@RPM_VERSION@)
+#define RPMLIB_TIMESTAMP RPMLIB_TIMESTAMP_ENCODE(@RPM_TIMESTAMP@)
+#define RPMLIB_VENDOR    RPMLIB_VENDOR_ENCODE(@RPM_VENDOR@)
 
 /* RPM release version encoding */
-#define RPM_VERSION_ENCODE(major,minor,type,micro,revision,snap) \
-    ( RPM_BITFIELD_SET(31,27,(major)) \
-    | RPM_BITFIELD_SET(26,21,(minor)) \
-    | RPM_BITFIELD_SET(20,18,RPM_VERSION_ENCODE_T(type)) \
-    | RPM_BITFIELD_SET(17,10,(micro)) \
-    | RPM_BITFIELD_SET(9,1,(revision)) \
-    | RPM_BITFIELD_SET(0,0,RPM_VERSION_ENCODE_S(snap)))
-#define RPM_VERSION_ENCODE_T(type) RPM_VERSION_ENCODE_T_##type
-#define RPM_VERSION_ENCODE_T__     0
-#define RPM_VERSION_ENCODE_T_a     1
-#define RPM_VERSION_ENCODE_T_b     2
-#define RPM_VERSION_ENCODE_T_c     3
-#define RPM_VERSION_ENCODE_T_r     4
-#define RPM_VERSION_ENCODE_S(snap) RPM_VERSION_ENCODE_S_##snap
-#define RPM_VERSION_ENCODE_S__     0
-#define RPM_VERSION_ENCODE_S_s     1
+#define RPMLIB_VERSION_ENCODE(major,minor,type,micro,revision,snap) \
+    ( RPMLIB_BITFIELD_SET(31,27,(major)) \
+    | RPMLIB_BITFIELD_SET(26,21,(minor)) \
+    | RPMLIB_BITFIELD_SET(20,18,RPMLIB_VERSION_ENCODE_T(type)) \
+    | RPMLIB_BITFIELD_SET(17,10,(micro)) \
+    | RPMLIB_BITFIELD_SET(9,1,(revision)) \
+    | RPMLIB_BITFIELD_SET(0,0,RPMLIB_VERSION_ENCODE_S(snap)))
+#define RPMLIB_VERSION_ENCODE_T(type) RPMLIB_VERSION_ENCODE_T_##type
+#define RPMLIB_VERSION_ENCODE_T__     0
+#define RPMLIB_VERSION_ENCODE_T_a     1
+#define RPMLIB_VERSION_ENCODE_T_b     2
+#define RPMLIB_VERSION_ENCODE_T_c     3
+#define RPMLIB_VERSION_ENCODE_T_r     4
+#define RPMLIB_VERSION_ENCODE_S(snap) RPMLIB_VERSION_ENCODE_S_##snap
+#define RPMLIB_VERSION_ENCODE_S__     0
+#define RPMLIB_VERSION_ENCODE_S_s     1
 
 /* RPM release timestamp encoding */
-#define RPM_TIMESTAMP_ENCODE(year,month,date,hour,minute) \
-    ( RPM_BITFIELD_SET(31,20,(year)) \
-    | RPM_BITFIELD_SET(19,16,(month)) \
-    | RPM_BITFIELD_SET(15,11,(date)) \
-    | RPM_BITFIELD_SET(10,6,(hour)) \
-    | RPM_BITFIELD_SET(5,0,(minute)))
+#define RPMLIB_TIMESTAMP_ENCODE(year,month,date,hour,minute) \
+    ( RPMLIB_BITFIELD_SET(31,20,(year)) \
+    | RPMLIB_BITFIELD_SET(19,16,(month)) \
+    | RPMLIB_BITFIELD_SET(15,11,(date)) \
+    | RPMLIB_BITFIELD_SET(10,6,(hour)) \
+    | RPMLIB_BITFIELD_SET(5,0,(minute)))
 
 /* RPM vendor tag encoding */
-#define RPM_VENDOR_ENCODE(c1,c2,c3,c4) \
-    ( RPM_BITFIELD_SET(31,24,(c1)) \
-    | RPM_BITFIELD_SET(23,16,(c2)) \
-    | RPM_BITFIELD_SET(15,8,(c3)) \
-    | RPM_BITFIELD_SET(7,0,(c4)))
+#define RPMLIB_VENDOR_ENCODE(c1,c2,c3,c4) \
+    ( RPMLIB_BITFIELD_SET(31,24,(c1)) \
+    | RPMLIB_BITFIELD_SET(23,16,(c2)) \
+    | RPMLIB_BITFIELD_SET(15,8,(c3)) \
+    | RPMLIB_BITFIELD_SET(7,0,(c4)))
 
 /* RPM release version assertion */
-#define RPM_VERSION_LT(major,minor,type,micro,revision,snap) \
-    (RPM_VERSION <  RPM_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
-#define RPM_VERSION_LE(major,minor,type,micro,revision,snap) \
-    (RPM_VERSION <= RPM_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
-#define RPM_VERSION_EQ(major,minor,type,micro,revision,snap) \
-    (RPM_VERSION == RPM_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
-#define RPM_VERSION_GE(major,minor,type,micro,revision,snap) \
-    (RPM_VERSION >= RPM_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
-#define RPM_VERSION_GT(major,minor,type,micro,revision,snap) \
-    (RPM_VERSION >  RPM_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
+#define RPMLIB_VERSION_LT(major,minor,type,micro,revision,snap) \
+    (RPMLIB_VERSION <  RPMLIB_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
+#define RPMLIB_VERSION_LE(major,minor,type,micro,revision,snap) \
+    (RPMLIB_VERSION <= RPMLIB_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
+#define RPMLIB_VERSION_EQ(major,minor,type,micro,revision,snap) \
+    (RPMLIB_VERSION == RPMLIB_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
+#define RPMLIB_VERSION_GE(major,minor,type,micro,revision,snap) \
+    (RPMLIB_VERSION >= RPMLIB_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
+#define RPMLIB_VERSION_GT(major,minor,type,micro,revision,snap) \
+    (RPMLIB_VERSION >  RPMLIB_VERSION_ENCODE((major),(minor),(type),(micro),(revision),(snap)))
 
 /* RPM release timestamp assertion */
-#define RPM_TIMESTAMP_LT(year,month,date,hour,minute) \
-    (RPM_TIMESTAMP <  RPM_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
-#define RPM_TIMESTAMP_LE(major,minor,type,micro,revision) \
-    (RPM_TIMESTAMP <= RPM_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
-#define RPM_TIMESTAMP_EQ(major,minor,type,micro,revision) \
-    (RPM_TIMESTAMP == RPM_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
-#define RPM_TIMESTAMP_GE(major,minor,type,micro,revision) \
-    (RPM_TIMESTAMP >= RPM_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
-#define RPM_TIMESTAMP_GT(major,minor,type,micro,revision) \
-    (RPM_TIMESTAMP >  RPM_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
+#define RPMLIB_TIMESTAMP_LT(year,month,date,hour,minute) \
+    (RPMLIB_TIMESTAMP <  RPMLIB_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
+#define RPMLIB_TIMESTAMP_LE(major,minor,type,micro,revision) \
+    (RPMLIB_TIMESTAMP <= RPMLIB_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
+#define RPMLIB_TIMESTAMP_EQ(major,minor,type,micro,revision) \
+    (RPMLIB_TIMESTAMP == RPMLIB_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
+#define RPMLIB_TIMESTAMP_GE(major,minor,type,micro,revision) \
+    (RPMLIB_TIMESTAMP >= RPMLIB_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
+#define RPMLIB_TIMESTAMP_GT(major,minor,type,micro,revision) \
+    (RPMLIB_TIMESTAMP >  RPMLIB_TIMESTAMP_ENCODE((year),(month),(date),(hour),(minute)))
 
 /* RPM vendor tag assertion */
-#define RPM_VENDOR_EQ(c1,c2,c3,c4) \
-    (RPM_VENDOR == RPM_VENDOR_ENCODE((c1),(c2),(c3),(c4)))
+#define RPMLIB_VENDOR_EQ(c1,c2,c3,c4) \
+    (RPMLIB_VENDOR == RPMLIB_VENDOR_ENCODE((c1),(c2),(c3),(c4)))
 
 /* encode numer "n" into the bits "l" (msb) to "r" (lsb) */
-#define RPM_BITFIELD_SET(l,r,n) \
+#define RPMLIB_BITFIELD_SET(l,r,n) \
     (((n) & ((1<<(((l)-(r))+1))-1) ) << (r))
 
 #ifdef __cplusplus
