@@ -33,7 +33,7 @@ RPM_LDADD = \
 pkgincdir = $(pkgincludedir)$(WITH_PATH_VERSIONED_SUFFIX)
 pkginc_HEADERS = \
 	argv.h envvar.h fts.h mire.h rpmbc.h rpmcb.h rpmdav.h rpmhash.h \
-	rpmio.h rpmio-stub.h rpmlog.h rpmmacro.h rpmmg.h rpmpgp.h \
+	rpmio.h rpmio-stub.h rpmlog.h rpmmacro.h rpmmg.h rpmnss.h rpmpgp.h \
 	rpmsq.h rpmsw.h rpmurl.h rpmxar.h ugid.h
 noinst_HEADERS = \
 	md2.h md4.h rmd128.h rmd160.h rmd256.h rmd320.h sha224.h \
@@ -47,7 +47,7 @@ librpmio_la_SOURCES = \
 	md2.c md4.c rmd128.c rmd160.c rmd256.c rmd320.c sha224.c \
 	salsa10.c salsa20.c tiger.c LzmaDecode.c \
 	rpmbc.c rpmdav.c rpmhash.c rpmhook.c rpmio.c rpmio-stub.c \
-	rpmlog.c rpmlua.c rpmmalloc.c rpmmg.c rpmpgp.c \
+	rpmlog.c rpmlua.c rpmmalloc.c rpmmg.c rpmnss.c rpmpgp.c \
 	rpmrpc.c rpmsq.c rpmsw.c rpmxar.c \
 	strcasecmp.c strtolocale.c url.c ugid.c
 librpmio_la_LDFLAGS = -release $(LT_CURRENT).$(LT_REVISION)
