@@ -1,4 +1,7 @@
 5.0a4 -> 5.0b1:
+    - jbj: fix: s/RPM_/RPMLIB_/ in rpmversion.h.in. That should "stick" now.
+    - rpm.org: credit for the original NSS hacks.
+    - jbj: no-brainer AutoFu for WITH_NSS enabling, add rpmnss.[ch] to rpmio.
     - jbj: tkey indicates functional DSA verification with rpmnss.c.
     - jbj: fix: debug the stoopids in rpmnss.c.
     - jbj: eliminate dueling typdef byte, beecrypt "owns" the typedef.
